# team_familie_airflow_dags

./: .gitignore  README.md  cred_decoding.py  kafka_cred_dev.yaml  kafka_cred_prod.yaml  pyproject.toml  requirements.txt  siste_image_versjon.py  test.py
.github/: dependabot.yml
Oracle_python/: bb_headers_requirement.py  fam_bt_skedulering.py  fam_ef_patch_migrerte_vedtak.py  fam_ef_patch_ybarn.py  fam_ef_stonad_arena.py  fam_ef_stonad_arena_methods.py  fam_ef_vedtak_arena.py  fam_ef_vedtak_arena_methods.py  fam_skedulering.py  fam_statistikk_skedulering.py  felles_metoder.py  insert_test_data.py  rekjoring_dags.py  requirements.txt  slett_OSPT.py  slett_fra_recycle_bin.py  ssb_fp.py  test_hello.py  test_local.py
allowlists/: allowlist.py
dags/: BB_konsument.py  BB_konsument_ord.py  BB_konsument_saer.py  BB_ord_headers.py  BT_konsument.py  EF_ARENA_kvalitet_maanedlig.py  EF_konsument.py  FP_konsument.py  KS_konsument.py  KS_test.py  PP_konsument.py  PP_omp_manedsprosessering.py  SSB_FP.py  SSB_FP_dag.py  TEST_FP_konsument.py  TS_data_migrering.py  TS_v2_data_migrering.py  UP_konsument.py  auto_rekjoring_feilet_dags.py  barnetryg_kafka.py  barnetrygd_utpakking.py  bb_avstemningsfiler.py  bb_bidrag_maanedsprosessering.py  bb_forskudd_maanedsprosessering.py  bb_historisk_data.py  brillestonad_data_migrering.py  brillestonad_fk_test.py  bt_skedulering.py  dagsrapport_refaktorert.py  docs_generate.py  dvh_fam_til_bq.py  ef_ny_losning_dag.py  ef_ybarn_og_migrereteVedtak.py  fam_skedulering.py  forskudd_test.py  fp_test.py  gard_test.py  hans-dag.py  kafka_demo.py  (+30 more)
(+25 files in other folders)
