[tool.poetry]
name = "team_familie_airflow_dags"
version = "0.1.0"
description = ""
authors = ["Adam Arafa Røe <adamarafaroe@nav.no>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dataverk = "^0.4.17"
dataverk-vault = "^0.1.10"
dataverk-airflow = "^0.3.26"
apache-airflow = "^2.7.1"
apache-airflow-providers-google = "^8.3.0"
apache-airflow-providers-sftp = "^4.0.0"
apache-airflow-providers-ssh = "^3.1.0"
cx-Oracle = "^8.3.0"
oracledb = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
